--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h3 {
+  font-size: 5em;
+  text-align: center;
+  color: #fff;
+  font-weight: 700;
+}
+
+p {
+  color: #fff;
+}
+
+#section1 {
+  color: #fff;
+}
+
+.fp-section {
+  text-align: center;
+}
+button {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 8;
+}
+
+#fp-nav ul li a span, .fp-slidesNav ul {
+  background: antiquewhite;
+}
